# api-horarios

./: .cz.yaml  .gitignore  .pre-commit-config.yaml  README.md  manager.py  pyproject.toml  run_blue.py  settings.yaml
src/: main.py
src/adapters/controllers/: __init__.py  api.py  discipline_api.py  namespaces.py  restriction_api.py  schedule_api.py  teacher_api.py
src/adapters/controllers/schemas/: teacher_schema.py
src/adapters/repositories/: database.py
src/entities/: __init__.py  discipline.py  restriction.py  schedule.py  teacher.py
src/entities/enums/: day_of_week_enum.py
src/entities/exceptions/: day_exception.py  id_exception.py  name_exception.py  time_exception.py
src/entities/services/: id_validator.py  name_validator.py  time_validate.py
src/usecases/: schedule_manager.py
tests/: conftest.py
tests/entities/: test_discipline.py  test_restriction.py  test_teacher.py
